[gd_scene load_steps=3 format=3 uid="uid://bqg2upc1hu4ve"]

[ext_resource type="Script" uid="uid://v83b1nq6k0pi" path="res://Shop/item_ui.gd" id="1_7tmjh"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8pkjn"]

[node name="ItemUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7tmjh")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_8pkjn")

[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
